objects/YouTube_Video__c/YouTube_Video__c.object-meta.xml
<CustomObject>
    <label>YouTube Video</label>
    <nameField>
        <displayFormat>YT-{0000}</displayFormat>
        <label>Video #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YouTube Videos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>