objects/YouTube_Video__c/fields/Channel_Title__c.field-meta.xml
<CustomField>
    <fullName>Channel_Title__c</fullName>
    <label>Channel Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>