objects/YouTube_Video__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>