objects/YouTube_Video__c/fields/PublishedAt__c.field-meta.xml
<CustomField>
    <fullName>PublishedAt__c</fullName>
    <label>Published At</label>
    <type>DateTime</type>
</CustomField>