objects/YouTube_Video__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>