objects/YouTube_Video__c/fields/Video_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_Id__c</fullName>
    <label>Video Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>