objects/YouTube_Video__c/fields/YouTube_Channel__c.field-meta.xml
<CustomField>
    <fullName>YouTube_Channel__c</fullName>
    <label>YouTube Channel</label>
    <referenceTo>YouTube_Channel__c</referenceTo>
    <relationshipName>Youtube_Videos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>