objects/YouTube_Video__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel_Title__c</columns>
    <columns>description__c</columns>
    <columns>PublishedAt__c</columns>
    <columns>Tags__c</columns>
    <columns>Thumbnail__c</columns>
    <columns>Title__c</columns>
    <columns>Video_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>